--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,10 +45,10 @@ jobs:
           username: ${{ secrets.DEPLOY_USER }}
           key: ${{ secrets.DEPLOY_SSH_KEY }}
           script: |
-            cd /var/www/homepage-wissens
+            cd /var/services/homes/juchul/homepage-wissens
             rm -rf dist
             mkdir -p dist
-            
+
       - name: Upload files to server
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         uses: appleboy/scp-action@master
@@ -57,10 +57,10 @@ jobs:
           username: ${{ secrets.DEPLOY_USER }}
           key: ${{ secrets.DEPLOY_SSH_KEY }}
           source: "build/*"
-          target: "/var/www/homepage-wissens/dist/"
+          target: "/var/services/homes/juchul/homepage-wissens/dist/"
           strip_components: 1
-      
-      - name: Restart nginx
+
+      - name: Restart web server
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         uses: appleboy/ssh-action@master
         with:
@@ -68,7 +68,7 @@ jobs:
           username: ${{ secrets.DEPLOY_USER }}
           key: ${{ secrets.DEPLOY_SSH_KEY }}
           script: |
-            sudo systemctl restart nginx
+            sudo synoservicectl --restart nginx
             echo "✅ Deployment completed successfully!"
 
   # 선택사항: PR에 대한 빌드 테스트
