nginx restart 제거, 배포 확인 단계로 변경

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,7 +62,7 @@ jobs:
           target: "/var/services/homes/juchul/homepage-wissens/dist/"
           strip_components: 1
 
-      - name: Restart web server
+      - name: Verify deployment
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         uses: appleboy/ssh-action@master
         with:
@@ -71,7 +71,7 @@ jobs:
           key: ${{ secrets.DEPLOY_SSH_KEY }}
           port: 2255
           script: |
-            sudo nginx -s reload
+            ls -la /var/services/homes/juchul/homepage-wissens/dist/
             echo "✅ Deployment completed successfully!"
 
   # 선택사항: PR에 대한 빌드 테스트
